assets/css/_addon/main.scss
/*
* The main styles.
* v2.0
* https://github.com/cotes2020/jekyll-theme-chirpy
* © 2018-2019 Cotes Chung
* MIT Licensed
*/

@import "_addon/module";
@import "_addon/variables";
@import "_colors/light-typography";
@import "_colors/dark-typography";

@import url('https://fonts.googleapis.com/css2?family=Lato&family=Source+Sans+Pro:wght@400;600;900&display=swap');


@mixin mode-toggle($dark-mode: false) {
  @if $dark-mode {
    @include dark-scheme;
    .mode-toggle {
      transform: rotateY(180deg);
    }
  } @else {
    @include light-scheme;
    .mode-toggle {
      transform: none;
    }
  }
}

html:not([mode]), html[mode=light] {
  @include mode-toggle();
}

html[mode=dark] {
  @include mode-toggle(true);
}

@media (prefers-color-scheme: dark) {
  html:not([mode]), html[mode=dark] {
    @include mode-toggle(true);
  }

  html[mode=light] {
    @include mode-toggle();
  }
}

:root {
  font-size: 16px;
}

body {
  line-height: 1.75rem;
  background: var(--body-bg);
  color: var(--text-color);
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro', 'Microsoft Yahei', sans-serif;
}

/*--- sidebar layout ---*/

$tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab

$sidebar-display: "sidebar-display";

#sidebar {
  @include pl-pr(0);
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  overflow-y: auto;
  width: $sidebar-width-medium;
  z-index: 99;
  background: var(--sidebar-bg);

  a {
    @include sidebar-links;
    &:hover {
      color: #fff;
      @include no-text-decoration;
    }
  }

  .site-title {
    a {
      font-weight: 900;
      font-size: 1.5rem;
      letter-spacing: 0.5px;
    }
  }

  .site-subtitle {
    font-size: 95%;
    color: #828282;
    line-height: 1.2rem;
    word-spacing: 1px;
    margin: 0.5rem 1.5rem 0.5rem 1.5rem;
    min-height: 3rem; // avoid vertical shifting in multi-line words
    user-select: none;
  }

  .nav-link {
    border-radius: 0;
    font-size: 0.95rem;
    font-weight: 600;
    letter-spacing: 1px;
    display: table-cell;
    vertical-align: middle;
  }

  .nav-item {
    text-align: center;
    display: table;
    height: $tab-height;
    &:hover {
      .nav-link {
        color: #f8f9facf;
      }
    }
    &.active {
      .nav-link {
        color: #fcfcfc;
      }
    }
  }

  ul {
    height: $tab-height * $tab-count;
    margin-bottom: 2rem;
    padding-left: 0;

    > li {
      width: 100%;

      &:last-child {
        $cursor-width: 3px;

        > a {
          position: relative;
          left: $cursor-width / 2;
          width: 100%;
        }

        &::after { // the cursor
          display: table;
          visibility: hidden;
          content: "";
          position: relative;
          right: 1px;
          width: $cursor-width;
          height: $tab-cursor-height;
          border-radius: 1px;
          background-color: var(--nav-cursor-color);
          pointer-events: none;
        }
      }
    } // li

    @mixin fix-cursor($top) {
      top: $top;
      visibility: visible;
    }

    @for $i from 1 through $tab-count {
      $offset: $tab-count - $i;
      $top: -$offset * $tab-height + $tab-cursor-height / 2;

      @if $i < $tab-count {
        > li.active:nth-child(#{$i}),
        > li.nav-item:nth-child(#{$i}):hover {
          ~li:last-child::after {
            @include fix-cursor($top);
          }
        }
      } @else {
        > li.active:nth-child(#{$i}):last-child::after,
        > li.nav-item:nth-child(#{$i}):last-child:hover::after {
          @include fix-cursor($top);
        }
      }

    } // @for

  } // ul

  .sidebar-bottom {
    font-size: 1.2rem;
    margin-bottom: 2.1rem;

    @include ml-mr(auto);
    @include pl-pr(1rem);

    %icon {
      width: 2.4rem;
      text-align: center;
    }

    a {
      @extend %icon;
    }

    a:hover, #mode-toggle-wrapper > i:hover {
      color: #fff;
    }

    #mode-toggle-wrapper {
      @extend %icon;

      i {
        @include sidebar-links;
        margin: 0;
        font-size: 1.05rem;
        text-align: center;
        position: relative;
        bottom: 1px;
      }

    }

    .icon-border {
      background-color: #525354;
      content: "";
      width: 3px;
      height: 3px;
      border-radius: 50%;
      position: relative;
      top: 12px;
    }

  } // .sidebar-bottom

} // #sidebar

@media (hover: hover) {
  #sidebar ul > li:last-child::after {
    -webkit-transition: top 0.5s ease;
    -moz-transition: top 0.5s ease;
    -o-transition: top 0.5s ease;
    transition: top 0.5s ease;
  }
}

.profile-wrapper {
  margin-top: 2rem;
  width: 100%;
}

#avatar {
  > a {
    display: block;
    width: 6rem;
    height: 6rem;
    border-radius: 50%;
    border: 2px solid #b6b6b6;
    overflow: hidden;
    transform: translateZ(0); // fixed the zoom in Safari
    -webkit-transition: border-color 0.35s ease-in-out;
    -moz-transition: border-color 0.35s ease-in-out;
    transition: border-color 0.35s ease-in-out;
  }

  &:hover > a {
    border-color: #fff;
  }

  img {
    width: 100%;
    height: 100%;
    -webkit-transition: transform 0.5s;
    -moz-transition: transform 0.5s;
    transition: transform 0.5s;

    &:hover {
      -ms-transform: scale(1.2);
      -moz-transform: scale(1.2);
      -webkit-transform: scale(1.2);
      transform: scale(1.2);
    }
  }
} // #avatar

#search-result-wrapper {
  display: none;
  position: fixed;
  top: 0;
  padding-top: 3rem;
  height: 100%;
  overflow: auto;
  .post-content {
    margin-top: 2rem;
  }
}

/*--- top-bar ---*/

#topbar-wrapper {
  height: $topbar-height;
  position: fixed;
  top: 0;
  left: 260px; /* same as sidebar width */
  right: 0;
  transition: top 0.2s ease-in-out;
  z-index: 50;
  border-bottom: 1px solid rgba(0, 0, 0, 0.07);
  box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.05);
  background-color: var(--topbar-wrapper-bg);
}

#topbar i { // icons
  color: #999;
}
/* ... */

